/cp 2014-12-18  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/60955
	* pt.c (struct warning_sentinel): Move it...
	* cp-tree.h: ... here.
	* semantics.c (force_paren_expr): Use it.

/testsuite
2014-12-18  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/60955
	* g++.dg/warn/register-parm-1.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@218871 138bc75d-0d04-0410-961f-82ee72b054a4